--- a/spring-minio/pom.xml
+++ b/spring-minio/pom.xml
@@ -21,5 +21,10 @@
             <artifactId>minio</artifactId>
             <version>8.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.14</version>
+        </dependency>
     </dependencies>
 </project>
