--- a/spring-mybatis/pom.xml
+++ b/spring-mybatis/pom.xml
@@ -43,6 +43,10 @@
             <version>1.9.7</version>
         </dependency>
         
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
