--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>spring-mybatis</module>
         <module>spring-minio</module>
         <module>java-utils</module>
+        <module>springcloud-redis</module>
         <module>springcloud-shutdown</module>
     </modules>
     <name>project-test</name>
